--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "food-app-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,6 +16,8 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.11.0",
+    "firebase-admin": "^11.1.0",
     "mongodb": "^4.10.0",
     "nodejs": "^0.0.0",
     "nodemon": "^2.0.20",
