--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "nodemon",
-    "start":"ts-node ./server/Server.ts"
-
+    "start": "ts-node ./server/Server.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,8 +21,18 @@
     "firebase-admin": "^11.1.0",
     "mongodb": "^4.10.0",
     "nodejs": "^0.0.0",
-    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.1.2",
+    "@types/superagent": "^4.1.15",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.2.0",
+    "mongodb-memory-server": "^8.9.3",
+    "nodemon": "^2.0.20",
+    "superagent": "^8.0.0",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3"
   }
 }
