--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "axios": "^1.1.3",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
