--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "firebase": "^9.11.0",
     "firebase-admin": "^11.1.0",
+    "immutable": "^4.1.0",
     "mongodb": "^4.10.0",
     "nodejs": "^0.0.0",
     "ts-node": "^10.9.1",
