--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-        /* Language and Environment */
-    "target": "ES2022",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "lib": ["ES2022"],                                      /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+    /* Language and Environment */
+    "target": "es2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "lib": ["es2020"],    
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    "rootDir": "server",                                    /* Specify the root folder within your source files. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
     
     /* JavaScript Support */
     "allowJs": true,                                     /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     "outDir": "build",                                   /* Specify an output folder for all emitted files. */
+    "sourceMap": true,                                  /* Specify a set of bundled library declaration files that describe the target runtime environment. */
 
     /* Interop Constraints */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
@@ -25,14 +25,15 @@
     /* Completeness */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  /* 
-    since we are using declaration merging for Express types we have to specifically let ts-node know that it 
-    has to compile additional files in src folder. 
+  // /* 
+  //   since we are using declaration merging for Express types we have to specifically let ts-node know that it 
+  //   has to compile additional files in src folder. 
 
-    P.S. ts-node compiler is used for nodemon
-  */
-  "ts-node": {
-    "files": true
-  },
-  "exclude": ["./jest.config.js", "./jest-mongodb-config.js"]
+  //   P.S. ts-node compiler is used for nodemon
+  // */
+  // "ts-node": {
+  //   "files": true
+  // },
+
+  "exclude": ["build", "server/tests", "jest-mongodb-config.js", "jest.config.js"]
 }
