--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "food-app-api",
+  "name": "smart-chief",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Server.js",
+  "engines": { "node": "18.10.0" },
   "scripts": {
     "test": "jest --verbose",
-    "start:dev": "nodemon",
-    "start": "ts-node ./server/Server.ts"
+    "start": "node build/Server.js",
+    "postinstall": "tsc",
+    "watch-node": "nodemon build/Server.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "keywords": [],
   "author": "",
