--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "target": "es2020",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "lib": ["es2020"],    
 
+    "typeRoots": ["./server/types", "./node_modules/@types"],
+
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "resolveJsonModule": true,                           /* Enable importing .json files. */
@@ -34,6 +36,5 @@
   // "ts-node": {
   //   "files": true
   // },
-
   "exclude": ["build", "server/tests", "jest-mongodb-config.js", "jest.config.js", "frontend"]
 }
