--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.11.4",
     "@types/superagent": "^4.1.15",
     "@types/supertest": "^2.0.12",
+    "axios-mock-adapter": "^1.21.2",
     "jest": "^29.2.0",
     "mongodb-memory-server": "^8.9.3",
     "nodemon": "^2.0.20",
