--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Server.js",
   "engines": {
-    "node": "18.10.0"
+    "node": "18.12.0"
   },
   "scripts": {
     "test": "jest --verbose",
@@ -16,12 +16,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.11.0",
     "firebase-admin": "^11.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "nodejs": "^0.0.0",
     "ts-node": "^10.9.1",
