--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "nodejs": "^0.0.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.1",
