--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.12.0"
   },
   "scripts": {
-    "test": "jest --verbose --detectOpenHandles",
+    "test": "jest ",
     "start": "node build/Server.js",
     "postinstall": "tsc",
     "compile": "tsc && node build/Server.js",
